RESOLVED FIXED127708
IDB: LevelDB backing store shouldn't know about IDBCursor or IDBCallbacks
https://bugs.webkit.org/show_bug.cgi?id=127708
Summary IDB: LevelDB backing store shouldn't know about IDBCursor or IDBCallbacks
Brady Eidson
Reported 2014-01-27 14:21:55 PST
IDB: LevelDB backing store shouldn't know about IDBCursor or IDBCallbacks Move that knowledge to the IDBCursorBackendOperations
Attachments
Patch v1 (15.56 KB, patch)
2014-01-27 14:31 PST, Brady Eidson
thorton: review+
Brady Eidson
Comment 1 2014-01-27 14:31:10 PST
Created attachment 222361 [details] Patch v1
WebKit Commit Bot
Comment 2 2014-01-27 14:32:49 PST
Attachment 222361 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/IDBCursorBackendOperations.cpp:43: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/Modules/indexeddb/IDBCursorBackendOperations.cpp:66: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3 2014-01-27 14:34:19 PST
Note You need to log in before you can comment on or make changes to this bug.