IDB: LevelDB backing store shouldn't know about IDBCursor or IDBCallbacks https://bugs.webkit.org/show_bug.cgi?id=127708

Reviewed by Tim Horton.

Source/WebCore:

Move that knowledge to the IDBCursorBackendOperations inside the callback.

* Modules/indexeddb/IDBCursorBackendOperations.cpp:
(WebCore::CursorAdvanceOperation::perform):
(WebCore::CursorIterationOperation::perform):
* Modules/indexeddb/IDBCursorBackendOperations.h:

* Modules/indexeddb/IDBServerConnection.h:
* Modules/indexeddb/leveldb/IDBServerConnectionLevelDB.cpp:
(WebCore::IDBServerConnectionLevelDB::cursorAdvance):
(WebCore::IDBServerConnectionLevelDB::cursorIterate):
* Modules/indexeddb/leveldb/IDBServerConnectionLevelDB.h:

Source/WebKit2:

Update to new callback signatures:
* WebProcess/Databases/IndexedDB/WebIDBServerConnection.cpp:
(WebKit::WebIDBServerConnection::cursorAdvance):
(WebKit::WebIDBServerConnection::cursorIterate):
* WebProcess/Databases/IndexedDB/WebIDBServerConnection.h:

Canonical link: https://commits.webkit.org/145721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162869 268f45cc-cd09-0410-ab3c-d52691b4dbfc